<resources>
    <string name="nofindmode">Can\'t find your model? One-click match</string>
    <string name="finddevicemsg">Please place your phone near Hub3, click start, and press the button on your remote control pointing at the device. The system will automatically find the most matching remote control</string>
    <string name="start">Start</string>
    <string name="ir_set_controller_name">Set Remote Name</string>
    <string name="cancel">Cancel</string>
    <string name="ir_delete">Delete</string>
    <string name="ir_send_success">Send Success</string>
    <string name="ir_edit_limit">About 6 characters</string>
    <string name="ir_modify_key_name">Modify Button Name</string>
    <string  translatable="false" name="temperature_format">°C</string>

    <!-- Power Status -->
    <string name="ir_remote_power_on">ON</string>
    <string name="ir_remote_power_off">OFF</string>

    <!-- Temperature -->
    <string name="air_conditioner_temperature">Temperature</string>

    <!-- Mode -->
    <string name="air_conditioner_model_auto_01">Auto Mode</string>
    <string name="air_conditioner_model_cold_02">Cool Mode</string>
    <string name="air_conditioner_model_dry_03">Dry Mode</string>
    <string name="air_conditioner_model_wind_04">Fan Mode</string>
    <string name="air_conditioner_model_hot_05">Heat Mode</string>

    <!-- Wind Vertical -->
    <string name="air_conditioner_wind_vertical_v1">Upward</string>
    <string name="air_conditioner_wind_vertical_v2">Center</string>
    <string name="air_conditioner_wind_vertical_v3">Downward</string>

    <!-- Wind Horizontal -->
    <string name="air_conditioner_wind_horizontal_auto">Auto Swing</string>
    <string name="air_conditioner_wind_horizontal_stop">Stop Swing</string>

    <!-- Wind Speed -->
    <string name="air_conditioner_wind_speed_auto">Auto Fan</string>
    <string name="air_conditioner_wind_speed_v1">Low Fan</string>
    <string name="air_conditioner_wind_speed_v2">Medium Fan</string>
    <string name="air_conditioner_wind_speed_v3">High Fan</string>
    <string name="ir_device_info_empty">Device information is empty</string>
    <string name="key_unsupported">Key is being adapted</string>
    <string name="ir_study">Learning🖋️</string>
    <string name="ir_ble_connect_fail">Bluetooth connection failed</string>
    <string name="ir_diy_empty">Click the ⊕ icon to enter learning mode, point the remote control at Hub3, and press the remote button to add a new IR key</string>
    <string name="network_retry">Network error, please tap to retry</string>
    <string name="ir_change_fail">Modification failed</string>
    <string name="ir_delete_fail">Failed to delete key</string>
    <string name="ir_ble_noable">Bluetooth is off</string>
    <string name="ir_no_code">No key list available. Please enter through the Hub3 settings interface to add keys</string>
    <string name="ir_long_click_edit">Long press to edit🖋️</string>
    <string name="ir_click_send">Click to emit🚀</string>
    <string name="ir_ble_invalid">Please return to the Hub3 details page to trigger automatic Bluetooth connection.</string>
    <string name="air_conditioner_temperature_refuse_change">Temperature adjustment is not supported in current mode</string>
    <string name="ir_company_notice">Can not find the specific brand remote model? Try searching for similar remote model names.</string>
    <string name="ir_company_search_control_hint">Search Remote Control Model</string>
    <string name="ir_match_key">Matching button %2$d in group %1$d (total %3$d groups, 7 buttons per group)</string>
    <string name="air_match_responded">Response detected, continue matching</string>
    <string name="air_match_no_respond_turn_next">No response, switching to next group</string>
    <string name="ir_match_tips">Please click the start button to begin automatic AC matching.</string>
    <string name="air_match_finished">Response detected, add remote control</string>
    <string name="air_match_success">Remote control added successfully</string>
    <string name="air_match_add_failed">Failed to add device</string>
    <string name="air_match_end">This is the last group of data</string>
    <string name="air_match_no_respond">No response</string>
    <string name="air_company_control">Remote Control Model</string>
    <string name="air_company_brand">AC Brand</string>
    <string name="ir_company_search_brand_hint">Search AC brand</string>
    <string name="air_match_item_tips">Please click the highlighted button in the list</string>
    <string name="air_match_introduction">Please press the highlighted button in the list below to test if the device responds</string>
    <string name="air_control_match">Can not control device? Auto-match remote</string>
    <string name="ir_save">Save</string>
    <string name="ir_confirm_controller_name">Please confirm remote name</string>

    <string name="tv_remote_mute">Mute</string>
    <string name="tv_remote_back">Back</string>
    <string name="tv_remote_up">Up</string>
    <string name="tv_remote_menu">Menu</string>
    <string name="tv_remote_left">Left</string>
    <string name="tv_remote_ok">OK</string>
    <string name="tv_remote_right">Right</string>
    <string name="tv_remote_volume_up">Vol+</string>
    <string name="tv_remote_down">Down</string>
    <string name="tv_remote_channel_up">CH+</string>
    <string name="tv_remote_volume_down">Vol-</string>
    <string name="tv_remote_home">Home</string>
    <string name="tv_remote_channel_down">CH-</string>

    <string name="ir_mode">Mode</string>
    <string name="light_mode_normal">Normal Mode</string>
    <string name="light_mode_reading">Reading Mode</string>
    <string name="light_mode_working">Work Mode</string>
    <string name="light_mode_evening">Evening Mode</string>
    <string name="light_brightness_up">Bright+</string>
    <string name="light_brightness_down">Bright-</string>
    <string name="light_color_temp_up">Temp+</string>
    <string name="light_color_temp_down">Temp-</string>
    <string name="ir_remote_power">Power</string>
    <string name="ir_support_info">HXD</string>
    <string name="air_auto_match_introduction">1.Point the remote control at the illuminated LED side of Hub3, then press the power button.\n2.Select the remote control in the return list and confirm whether the device is under control</string>
    <string name="air_auto_match_code_fail">Failed to find data for this remote control model, please try again</string>
    <string name="ir_wave_too_short">The remote control data read is too short, please try again</string>
    <string name="ir_auto_searching_remote">Searching for the most likely remote control...</string>


    <string-array name="strs_device">
        <item>Air Conditioner</item>
        <item>Water Heater</item>
        <item>Air Purifier</item>
        <item>TV</item>
        <item>IPTV</item>
        <item>Set-top Box</item>
        <item>DVD Player</item>
        <item>Fan</item>
        <item>Projector</item>
        <item>Remote Control Light</item>
        <item>Digital Camera</item>
        <item>Sound System</item>
        <item>Vacuum Cleaner</item>
        <item>Learning</item>
    </string-array>
</resources>