<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/topTitle"
        layout="@layout/top_title" />

    <TextView
        android:id="@+id/textview_ir_support_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/ir_support_info"
        android:textColor="@color/text_hint"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/autoMatchTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="left"
        android:text="@string/air_auto_match_introduction"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topTitle" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMatchRemote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/autoMatchTitle" />
    <TextView
        android:id="@+id/tvSearching"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/ir_auto_searching_remote"
        app:layout_constraintTop_toBottomOf="@id/autoMatchTitle"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>