<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">
    <View
        android:id="@+id/base_line"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"/>
    <LinearLayout
        android:id="@+id/linear_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/base_line"
        android:orientation="vertical">
        <include
            android:id="@+id/topTitle"
            layout="@layout/top_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_research"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="8dp"
        android:background="@color/gray0"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_title">
        <EditText
            android:id="@+id/edtTv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/air_search_background"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/svg_search"
            android:elevation="2dp"
            android:hint="@string/ir_company_search_control_hint"
            android:layout_marginEnd="16dp"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/textView_search_cancel"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/cancel"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textview_ir_company_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/gray0"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="6dp"
        android:text="@string/ir_company_notice"
        android:textColor="@color/gray3"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_research" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/editRyView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/tvNofind"
        app:layout_constraintTop_toBottomOf="@id/textview_ir_company_notice" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/indexTb"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/tvNofind"
        app:layout_constraintTop_toBottomOf="@id/textview_ir_company_notice" />

    <TextView
        android:id="@+id/tvNofind"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="-48dp"
        android:background="@color/gray0"
        android:gravity="center"
        android:text="@string/nofindmode"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <candyhouse.sesameos.ir.widget.SideBar
        android:id="@+id/sideBar"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_research"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>